2020-03-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 45583/0007: Config/version.mk, Src/exec.c, Src/parse.c,
	Src/text.c: WC_FUNCDEF: Add a placeholder element.

	* 45583/0006: Src/parse.c: internal: Add some comments for
	orientation. No functional change.

	* 45583/0005: Src/parse.c: internal: Document the WC_FUNCDEF
	data layout for anonymous functions with arguments (follow-up
	to 29492)

	* 45583/0004: Src/parse.c, Src/zsh.h: internal: Add some comments
	around wordcodes. No functional change.

	* 45583/0003: Src/parse.c, Src/zsh.h: internal: Add some comments
	around Eccstr. No functional change.

	* 45583/0002: Src/parse.c: internal: Reduce some variables'
	visibility. No functional change.

	* 45583/0001: Src/exec.c: internal: Remove a redundant
	assignment.

2020-03-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Builtins/rlimits.c: Deconfuse $EDITOR's balanced
	braces mode.  No functional change.

	* unposted: Doc/Zsh/expn.yo: ${(Z)}: Convert documentation to
	a description block.

	* unposted: Util/ztst-syntax.vim: internal: ztst.vim: Make
	sure syntax elements are only hidden if they're followed by
	something visible

2020-03-18  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: .editorconfig: Specify tabs for Makefiles.

2020-03-17  Daniel Shahaf  <danielsh@apache.org>

	* 45572: Completion/Linux/Command/_sshfs: Complete some more
	options

2020-03-17  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 45536: Src/utils.c: fix handling of 8bit character in
	is_wcs_nicechar() and wcs_nicechar_sel() under C-locale.

2020-03-15  Daniel Shahaf  <danielsh@apache.org>

	* 45541: Functions/VCS_Info/test-repo-git-rebase-apply: internal:
	vcs_info git: Add a test case repository for rebase-apply
	situations

	* 45539: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: In non-interactive rebases, obtain applied
	patches' names.

	* 45540: Doc/Zsh/contrib.yo,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git: vcs_info git: